--- a/main.tex
+++ b/main.tex
@@ -1,37 +1,31 @@
-%% Template for Master thesis
-%% ===========================
-\documentclass  [
-  paper    = a4,
-  BCOR     = 10mm,
+\documentclass[
+  paper= a4,
+  BCOR=10mm,
   twoside,
-  fontsize = 12pt,
+  fontsize=12pt,
   fleqn,
-  toc      = bibnumbered,
-  toc      = listofnumbered,
-  numbers  = noendperiod,
-  headings = normal,
-  listof   = leveldown,
-  version  = 3.03
-]                                       {scrreprt}
+  toc=bibnumbered,
+  toc=listofnumbered,
+  numbers=noendperiod,
+  headings=normal,
+  listof=leveldown,
+  version=3.03
+]{scrreprt}
 
-\usepackage     [utf8]                  {inputenc}
-\usepackage     [T1]                    {fontenc}
-\usepackage                             {color}
-\usepackage                             {amsmath}
-\usepackage                             {graphicx}
-\usepackage     [english]               {babel}
-\usepackage                             {natbib}
-\usepackage                             {hyperref}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage{color}
+\usepackage{amsmath}
+\usepackage{graphicx}
+\usepackage[english]{babel}
+\usepackage{natbib}
+\usepackage{hyperref}
+\usepackage{pgffor}
 
-% links
-\definecolor{darkblue}{rgb}{0.0,0.0,0.4}
-\definecolor{darkgreen}{rgb}{0.0,0.4,0.0}
-\hypersetup{
-    colorlinks,
-    linkcolor=black,
-    citecolor=darkgreen,
-    urlcolor=darkblue
+\newcommand*{\files}{
+    chapters/introduction,
 }
+
 
 \begin{document}
 
@@ -39,17 +33,15 @@
 \include{abstracts}
 
 \tableofcontents
-%% Put your contents here
 
-\part{Appendix}
-\begin{appendix}
-  \chapter{Lists}
-  \listoffigures
-  \listoftables
-  \bibliography{references}{}
-  \citestyle{egu}
-  \bibliographystyle{plainnat}
-  \include{deposition}
-\end{appendix}
+%% Put your contents here
+\foreach \i in \files {
+    \edef\FileName{\i}
+    \IfFileExists{\FileName}{
+      \input{\FileName}
+    }
+    {
+    }
+  }
 
 \end{document}
