--- a/titlepages-eng.tex
+++ b/titlepages-eng.tex
@@ -14,11 +14,11 @@
   \large Heidelberg University
   \par\vfill\normalfont
   Master thesis\\
-  in Physics\\
+  in Computer Science\\
   submitted by\\
-  (name and surname)\\
-  born in (place of birth)\\
-  (year of submission)
+  Stefan Machmeier\\
+  born in Heidelberg\\
+  2022
 \end{center}
 \newpage
 
@@ -27,17 +27,17 @@
 \begin{center}
   \renewcommand{\baselinestretch}{2.00}
   \Large\bfseries\sffamily
-    (Title)\\
-    (of)\\
-    (Master thesis)
+    Honeypot Implementation\\
+    in a\\
+    Cloud Environment
   \par
   \vfill
   \large\normalfont
-  This Master thesis has been carried out by (Name Surname)\\
+  This Master thesis has been carried out by Stefan Machmeier\\
   at the\\
-  (institute)\\
+  EMCL\\
   under the supervision of\\
-  (Frau/Herrn Prof./Priv.-Doz. Name Surname)
+  Herrn Prof. Dr. Vincent Heuveline
   %% additionally insert second supervisor here if carrying out an
   %% external diploma thesis. Reduce vspace in L. 44 accordingly.
 \end{center}\par
