Update current state

--- a/main.tex
+++ b/main.tex
@@ -25,13 +25,16 @@
 \newcommand*{\files}{
     introduction,
     background,
-    previous_work
+    related_work,
+    practical_work,
+    experimental_work,
+    conclusion,
 }
 
 
 \begin{document}
 
-\include{titlepages-eng} % or english title page
+\include{titlepages-eng}
 \include{abstracts}
 
 \tableofcontents
