--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,4 @@
-@article{article,
+@article{Provos2003,
   author = {Provos, Niels},
   year   = {2003},
   month  = {01},
@@ -17,4 +17,62 @@
   author    = {Christopher Kelly and Nikolaos Pitropakis and Alexios Mylonas and Sean McKeown and William J. Buchanan},
   title     = {A Comparative Analysis of Honeypots on Different Cloud Platforms},
   journal   = {Sensors}
+}
+@inproceedings{Kuwatly2004,
+  author    = {Kuwatly, I. and Sraj, M. and Al Masri, Z. and Artail, H.},
+  booktitle = {The IEEE/ACS International Conference onPervasive Services, 2004. ICPS 2004. Proceedings.},
+  title     = {A dynamic honeypot design for intrusion detection},
+  year      = {2004},
+  volume    = {},
+  number    = {},
+  pages     = {95-104},
+  doi       = {10.1109/PERSER.2004.1356776}
+}
+@book{Spitzner2003,
+  author    = {Spitzner, Lance},
+  year      = {2003},
+  title     = {Honeypots - Tracking Hackers},
+  edition   = {},
+  isbn      = {978-0-321-10895-1},
+  publisher = {Addison-Wesley},
+  address   = {Amsterdam}
+}
+@misc{Diebold2005,
+  author    = {P. Diebold, A. Hess, G. Schaefer},
+  title     = {A Honeypot Architecture for Detecting and Analyzing
+  Unknown Network Attacks},
+  publisher = {Telecommunication Networks Group, Technische Universität Berlin, Germany,},
+  year      = {2005},
+  month     = {Feburary}
+}
+@inproceedings{Mahajan2017,
+  author    = {Mahajan, Varan and Peddoju, Sateesh K},
+  booktitle = {2017 International Conference on Computing, Communication and Automation (ICCCA)},
+  title     = {Integration of network intrusion detection systems and honeypot networks for cloud security},
+  year      = {2017},
+  volume    = {},
+  number    = {},
+  pages     = {829-834},
+  doi       = {10.1109/CCAA.2017.8229911}
+}
+@book{Wendzel2021,
+  doi       = {10.1007/978-3-658-33423-9},
+  url       = {https://doi.org/10.1007/978-3-658-33423-9},
+  year      = {2021},
+  publisher = {Springer Fachmedien Wiesbaden},
+  author    = {Steffen Wendzel},
+  title     = {{IT}-Sicherheit f\"{u}r {TCP}/{IP}- und {IoT}-Netzwerke}
+}
+@article{Jiang2006,
+  doi       = {10.1016/j.jpdc.2006.04.012},
+  url       = {https://doi.org/10.1016/j.jpdc.2006.04.012},
+  year      = {2006},
+  month     = sep,
+  publisher = {Elsevier {BV}},
+  volume    = {66},
+  number    = {9},
+  pages     = {1165--1180},
+  author    = {Xuxian Jiang and Dongyan Xu and Yi-Min Wang},
+  title     = {Collapsar: A {VM}-based honeyfarm and reverse honeyfarm architecture for network attack capture and detention},
+  journal   = {Journal of Parallel and Distributed Computing}
 }
