--- a/titlepages-eng.tex
+++ b/titlepages-eng.tex
@@ -1,16 +1,8 @@
-%% this will generate title pages similar to the template provided
-%% by the Department of Physics and Astronomy Heidelberg
-%%
-%% More information:
-%% http://www.physik.uni-heidelberg.de/aktuelles/studium/
-%% (PDF link: ...studium/download/145/Vorlage_Diplomarbeit_Formular.pdf)
-
-%% Titleintro
 \thispagestyle{empty}
 \begin{center}
   \renewcommand{\baselinestretch}{2.00}
   \Large\sffamily
-  Department of Physics and Astronomy\\
+  Faculty of Mathematics and Computer Science\\
   \large Heidelberg University
   \par\vfill\normalfont
   Master thesis\\
@@ -22,7 +14,6 @@
 \end{center}
 \newpage
 
-%% Titlepage
 \thispagestyle{empty}
 \begin{center}
   \renewcommand{\baselinestretch}{2.00}
@@ -35,7 +26,7 @@
   \large\normalfont
   This Master thesis has been carried out by Stefan Machmeier\\
   at the\\
-  EMCL\\
+  Engineering Mathematics and Computing Lab\\
   under the supervision of\\
   Herrn Prof. Dr. Vincent Heuveline
   %% additionally insert second supervisor here if carrying out an
