Add first draft

--- a/main.tex
+++ b/main.tex
@@ -83,7 +83,7 @@
 % Add
 % Bibliography
 \nocite{*}
-\bibliographystyle{apalike}  
+\bibliographystyle{alpha}  
 \bibliography{references}
 % Installation and configuration
 
