--- a/references.bib
+++ b/references.bib
@@ -156,3 +156,22 @@
   year      = {2008},
   publisher = {ACM New York, NY, USA}
 }
+@misc{regalado2020,
+  title     = {Who Coined 'Cloud Computing'?},
+  url       = {https://www.technologyreview.com/2011/10/31/257406/who-coined-cloud-computing/},
+  journal   = {MIT Technology Review},
+  publisher = {MIT Technology Review},
+  author    = {Regalado, Antonio},
+  year      = {2020},
+  month     = {Feb}
+}
+@article{Nithin2012,
+  title={Cloud security using honeypot systems},
+  author={Nithin Chandra, SR and Madhuri, TM},
+  journal={International Journal of Scientific \& Engineering Research},
+  volume={3},
+  number={3},
+  pages={1},
+  year={2012},
+  publisher={Citeseer}
+}
