--- a/references.bib
+++ b/references.bib
@@ -166,12 +166,21 @@
   month     = {Feb}
 }
 @article{Nithin2012,
-  title={Cloud security using honeypot systems},
-  author={Nithin Chandra, SR and Madhuri, TM},
-  journal={International Journal of Scientific \& Engineering Research},
-  volume={3},
-  number={3},
-  pages={1},
-  year={2012},
-  publisher={Citeseer}
+  title     = {Cloud security using honeypot systems},
+  author    = {Nithin Chandra, SR and Madhuri, TM},
+  journal   = {International Journal of Scientific \& Engineering Research},
+  volume    = {3},
+  number    = {3},
+  pages     = {1},
+  year      = {2012},
+  publisher = {Citeseer}
+}
+@inproceedings{Dillon2010,
+  doi       = {10.1109/aina.2010.187},
+  url       = {https://doi.org/10.1109/aina.2010.187},
+  year      = {2010},
+  publisher = {{IEEE}},
+  author    = {Tharam Dillon and Chen Wu and Elizabeth Chang},
+  title     = {Cloud Computing: Issues and Challenges},
+  booktitle = {2010 24th {IEEE} International Conference on Advanced Information Networking and Applications}
 }
