--- a/acronyms.tex
+++ b/acronyms.tex
@@ -1,4 +1,5 @@
-\newacronym{nist}{NIST}{National Institute of Standards and Technology}
-\newacronym{saas}{SaaS}{Software-as-a-Service}
-\newacronym{iaas}{IaaS}{Infrastructure-as-a-Service}
-\newacronym{paas}{PaaS}{Platform-as-a-Service}
+\DeclareAcronym{nist}{short=NIST, long=National Institute of Standards and Technology}
+\DeclareAcronym{saas}{short=SaaS, long=Software-as-a-Service}
+\DeclareAcronym{iaas}{short=IaaS, long=Infrastructure-as-a-Service}
+\DeclareAcronym{paas}{short=PaaS, long=Platform-as-a-Service}
+\DeclareAcronym{http}{short=HTTP, long= Hypertext Transfer Protocol}
