--- a/acronyms.tex
+++ b/acronyms.tex
@@ -3,3 +3,4 @@
 \DeclareAcronym{iaas}{short=IaaS, long=Infrastructure-as-a-Service}
 \DeclareAcronym{paas}{short=PaaS, long=Platform-as-a-Service}
 \DeclareAcronym{http}{short=HTTP, long= Hypertext Transfer Protocol}
+\DeclareAcronym{daas}{short=DaaS, long=Data-as-a-Service}
