--- a/references.bib
+++ b/references.bib
@@ -184,3 +184,11 @@
   title     = {Cloud Computing: Issues and Challenges},
   booktitle = {2010 24th {IEEE} International Conference on Advanced Information Networking and Applications}
 }
+@techreport{Mell2011,
+  doi       = {10.6028/nist.sp.800-145},
+  url       = {https://doi.org/10.6028/nist.sp.800-145},
+  year      = {2011},
+  publisher = {National Institute of Standards and Technology},
+  author    = {P M Mell and T Grance},
+  title     = {The {NIST} definition of cloud computing}
+}
