--- a/references.bib
+++ b/references.bib
@@ -192,3 +192,19 @@
   author    = {P M Mell and T Grance},
   title     = {The {NIST} definition of cloud computing}
 }
+@inproceedings{10.1145/1879141.1879143,
+  author    = {Li, Ang and Yang, Xiaowei and Kandula, Srikanth and Zhang, Ming},
+  title     = {CloudCmp: Comparing Public Cloud Providers},
+  year      = {2010},
+  isbn      = {9781450304832},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  url       = {https://doi.org/10.1145/1879141.1879143},
+  doi       = {10.1145/1879141.1879143},
+  booktitle = {Proceedings of the 10th ACM SIGCOMM Conference on Internet Measurement},
+  pages     = {1–14},
+  numpages  = {14},
+  keywords  = {performance, comparison, cost, cloud computing},
+  location  = {Melbourne, Australia},
+  series    = {IMC '10}
+}
