--- a/acronyms.tex
+++ b/acronyms.tex
@@ -4,3 +4,4 @@
 \DeclareAcronym{paas}{short=PaaS, long=Platform-as-a-Service}
 \DeclareAcronym{http}{short=HTTP, long= Hypertext Transfer Protocol}
 \DeclareAcronym{daas}{short=DaaS, long=Data-as-a-Service}
+\DeclareAcronym{haas}{short=HaaS, long=Hardware-as-a-Service}
