--- a/references.bib
+++ b/references.bib
@@ -185,12 +185,13 @@
   booktitle = {2010 24th {IEEE} International Conference on Advanced Information Networking and Applications}
 }
 @techreport{Mell2011,
-  doi       = {10.6028/nist.sp.800-145},
-  url       = {https://doi.org/10.6028/nist.sp.800-145},
-  year      = {2011},
-  publisher = {National Institute of Standards and Technology},
-  author    = {P M Mell and T Grance},
-  title     = {The {NIST} definition of cloud computing}
+  doi         = {10.6028/nist.sp.800-145},
+  url         = {https://doi.org/10.6028/nist.sp.800-145},
+  year        = {2011},
+  publisher   = {National Institute of Standards and Technology},
+  institution = {National Institute of Standards and Technology},
+  author      = {P M Mell and T Grance},
+  title       = {The {NIST} definition of cloud computing}
 }
 @inproceedings{10.1145/1879141.1879143,
   author    = {Li, Ang and Yang, Xiaowei and Kandula, Srikanth and Zhang, Ming},
