--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,7 @@
 \usepackage{listings}
 \usepackage{csquotes}
 \usepackage{acro}
+\usepackage[colorinlistoftodos,prependcaption,textsize=tiny]{todonotes}
 
 \include{acronyms}
 
