Update deployment models

--- a/main.tex
+++ b/main.tex
@@ -25,6 +25,7 @@
 \usepackage{acro}
 \usepackage[colorinlistoftodos,prependcaption,textsize=tiny]{todonotes}
 \usepackage[toc,page]{appendix}
+\usepackage{tabularx}
 
 \include{acronyms}
 
@@ -63,6 +64,7 @@
 
 \pagenumbering{Roman}
 
+\setcounter{tocdepth}{1}
 \tableofcontents
 \newpage
 
