--- a/acronyms.tex
+++ b/acronyms.tex
@@ -5,3 +5,4 @@
 \DeclareAcronym{http}{short=HTTP, long= Hypertext Transfer Protocol}
 \DeclareAcronym{daas}{short=DaaS, long=Data-as-a-Service}
 \DeclareAcronym{haas}{short=HaaS, long=Hardware-as-a-Service}
+\DeclareAcronym{dtk}{short=DTK, long=Deception Toolkit}
