--- a/main.tex
+++ b/main.tex
@@ -33,8 +33,11 @@
     introduction,
     background,
     related_work,
+    concept,
+    methods,
+    data_management,
+    data_analysis,
     practical_work,
-    experimental_work,
     evaluation,
     conclusion,
 }
