Update honeypot section

--- a/references.bib
+++ b/references.bib
@@ -209,3 +209,17 @@
   location  = {Melbourne, Australia},
   series    = {IMC '10}
 }
+@book{stroll2000,
+  author    = {Stoll, Clifford},
+  title     = {The  Cuckoo's Egg: Tracking a Spy through the Maze of Computer Espionage},
+  year      = {2000},
+  isbn      = {0743411463},
+  publisher = {Pocket Books}
+}
+@inproceedings{Cheswick92,
+  author    = {Bill Cheswick},
+  title     = {An Evening with Berferd in which a cracker is Lured, Endured, and Studied},
+  booktitle = {In Proc. Winter USENIX Conference},
+  year      = {1992},
+  pages     = {163--174}
+}
