--- a/acronyms.tex
+++ b/acronyms.tex
@@ -6,3 +6,4 @@
 \DeclareAcronym{daas}{short=DaaS, long=Data-as-a-Service}
 \DeclareAcronym{haas}{short=HaaS, long=Hardware-as-a-Service}
 \DeclareAcronym{dtk}{short=DTK, long=Deception Toolkit}
+\DeclareAcronym{cert}{short=CERT, long=Computer Emergency Response Team}
