--- a/references.bib
+++ b/references.bib
@@ -193,7 +193,7 @@
   author      = {P M Mell and T Grance},
   title       = {The {NIST} definition of cloud computing}
 }
-@inproceedings{10.1145/1879141.1879143,
+@inproceedings{Li2010,
   author    = {Li, Ang and Yang, Xiaowei and Kandula, Srikanth and Zhang, Ming},
   title     = {CloudCmp: Comparing Public Cloud Providers},
   year      = {2010},
