--- a/network/honeypot-example.tex
+++ b/network/honeypot-example.tex
@@ -3,8 +3,8 @@
   % servers
   % = = = = = = = = = = = = = = = =
   \node[server](server 1){};
-  \node[server, right of= server 1](server 2){};
-  \node[server, right of= server 2](server 3){};
+  \node[xshift = 3cm, server, right of= server 1](server 2){};
+  \node[xshift = 3cm, server, right of= server 2](server 3){};
 
   \node[rack switch, above of=server 2,xshift=0.1cm,yshift=0.3cm]
   (rack switch 1){};
@@ -13,10 +13,10 @@
   \draw[thick,darkgray!10!gray] (server 2.north)--(rack switch 1);
   \draw[thick,darkgray!10!gray] (server 3.north)--(rack switch 1);
 
-  \begin{scope}[xshift=3.5cm]
+  \begin{scope}[xshift=7.5cm]
     \node[server](server 4){};
-    \node[server, right of= server 4](server 5){};
-    \node[server, right of= server 5](server 6){};
+    \node[xshift = 3cm, server, right of= server 4](server 5){};
+    \node[xshift = 3cm, server, right of= server 5](server 6){};
 
     \node[rack switch, above of=server 5,xshift=0.1cm,yshift=0.3cm]
     (rack switch 2){};
@@ -38,7 +38,7 @@
   \end{scope}
   
   \begin{scope}
-    \node[xshift=1.7cm, yshift=1cm,scale=0.2, above of = l3 switch 1] (brouter) {\router{}} 
+    \node[xshift=3.75cm, yshift=1cm,scale=0.2, above of = l3 switch 1] (brouter) {\router{}} 
       edge[very thick,darkgray!10!gray] ([xshift=0.1cm,yshift=0.5cm]l3 switch 1)
       edge[very thick,darkgray!10!gray] ([xshift=0.1cm,yshift=0.5cm]l3 switch 2);
     \node[yshift=0.65cm,my cloud, minimum width=1.25cm, minimum height=1.55cm, above of = brouter, font=\large] (it) {Internet} edge[very thick,darkgray!30!gray] (brouter);
@@ -47,9 +47,18 @@
   % = = = = = = = = = = = = = = = =
   % Labels
   % = = = = = = = = = = = = = = = =
-  \node[xshift=1.5cm,right of = brouter,align=right](lev5) {Gateway Router};
-  \node[xshift=0.5cm, right of = rack switch 1,align=right](lev1) {DMZ};
-  \node[xshift=0.5cm, right of = rack switch 2,align=right](lev2) {Internal};
+  \node[xshift=5.00cm, right of = brouter,align=right](lev5) {Gateway Router};
+  \node[xshift=0.25cm, right of = l3 switch 1,align=right](lev1) {DMZ};
+  \node[xshift=0.50cm, right of = l3 switch 2,align=right](lev2) {Internal};
+
+  \node[below of = server 3, align=right](a) {Honeybot A};
+  \node[below of = server 2, align=right](b) {Web};
+  \node[below of = server 1, align=right](c) {Mail};
+
+  \node[below of = server 6, align=right](a) {Honeybot B};
+  \node[below of = server 5, align=right](b) {Desktop};
+  \node[below of = server 4, align=right](c) {Desktop};
+
 
   % = = = = = = = = = = = = = = = =
   % paths
@@ -58,7 +67,11 @@
   shorten >=0.56cm]([yshift=-0.25cm]brouter.west)--
   ([xshift=0.05cm]l3 switch 1.north);
 
-  \draw[stealth-stealth,very thick, red!80!black,shorten <=0.025cm,
-  shorten >=0.56cm]([yshift=-0.25cm]l3 switch 1.south)--
-  ([xshift=0.05cm]rack switch 1.north);
+  \draw[stealth-stealth,very thick, red!80!black,shorten <=0.1cm,
+  shorten >=0.2cm]([xshift=0.1cm]l3 switch 1.south)--
+  ([xshift=0.1cm]rack switch 1.north);
+
+  \draw[stealth-stealth,very thick, red!80!black,shorten <=0.1cm, shorten >=0.1cm]
+  ([xshift=0.1cm]rack switch 1.south)--
+  ([xshift=-0.175cm]server 3.north);
 \end{tikzpicture}
