--- a/acronyms.tex
+++ b/acronyms.tex
@@ -7,3 +7,4 @@
 \DeclareAcronym{haas}{short=HaaS, long=Hardware-as-a-Service}
 \DeclareAcronym{dtk}{short=DTK, long=Deception Toolkit}
 \DeclareAcronym{cert}{short=CERT, long=Computer Emergency Response Team}
+\DeclareAcronym{os}{short=OS, long=Operating System}
