--- a/references.bib
+++ b/references.bib
@@ -223,3 +223,12 @@
   year      = {1992},
   pages     = {163--174}
 }
+@book{Schneier2004,
+  author    = {Schneier, Bruce},
+  year      = {2004},
+  title     = {Secrets \& lies - IT-Sicherheit in einer vernetzten Welt},
+  edition   = {},
+  isbn      = {978-3-898-64302-3},
+  publisher = {Dpunkt-Verlag},
+  address   = {Köln}
+}
