Finish interation section

--- a/main.tex
+++ b/main.tex
@@ -26,6 +26,7 @@
 \usepackage[colorinlistoftodos,prependcaption,textsize=tiny]{todonotes}
 \usepackage[toc,page]{appendix}
 \usepackage{tabularx}
+\usepackage[inline]{enumitem}
 
 \include{acronyms}
 \include{network-config}
@@ -69,7 +70,7 @@
 
 \pagenumbering{Roman}
 
-\setcounter{tocdepth}{1}
+%\setcounter{tocdepth}{1}
 \tableofcontents
 \newpage
 
