--- a/acronyms.tex
+++ b/acronyms.tex
@@ -8,3 +8,4 @@
 \DeclareAcronym{dtk}{short=DTK, long=Deception Toolkit}
 \DeclareAcronym{cert}{short=CERT, long=Computer Emergency Response Team}
 \DeclareAcronym{os}{short=OS, long=Operating System}
+\DeclareAcronym{ids}{short=IDS, long=Intrusion Detection Systems}
