--- a/references.bib
+++ b/references.bib
@@ -232,3 +232,24 @@
   publisher = {Dpunkt-Verlag},
   address   = {Köln}
 }
+@inproceedings{Mokube2007,
+  author    = {Mokube, Iyatiti and Adams, Michele},
+  title     = {Honeypots: Concepts, Approaches, and Challenges},
+  year      = {2007},
+  isbn      = {9781595936295},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  url       = {https://doi.org/10.1145/1233341.1233399},
+  doi       = {10.1145/1233341.1233399},
+  booktitle = {Proceedings of the 45th Annual Southeast Regional Conference},
+  pages     = {321–326},
+  numpages  = {6},
+  keywords  = {legal issues, types of honeypots, honeypots},
+  location  = {Winston-Salem, North Carolina},
+  series    = {ACM-SE 45}
+}
+@inproceedings{Kaur2014,
+  title  = {Comparison of network security tools- Firewall, Intrusion Detection System and Honeypot},
+  author = {Tejvir Kaur and Vimmi Malhotra and Dheerendra Singh},
+  year   = {2014}
+}
