--- a/references.bib
+++ b/references.bib
@@ -253,3 +253,10 @@
   author = {Tejvir Kaur and Vimmi Malhotra and Dheerendra Singh},
   year   = {2014}
 }
+@misc{heicloud2021,
+  author       = {Rechenzentrum der Universität Heidelberg},
+  title        = {heiCLOUD - Die Heidelberger Cloud-Infrastruktur},
+  howpublished = {https://heicloud.uni-heidelberg.de/heiCLOUD},
+  year         = {2021},
+  note         = {Accessed: 2021-09-02}
+}
