Update after clarification with prof.

--- a/main.tex
+++ b/main.tex
@@ -34,14 +34,10 @@
 \newcommand*{\files}{
     introduction,
     background,
-    related_work,
     cloud_security,
     concept,
-    methods,
     data_management,
-    data_analysis,
-    practical_work,
-    evaluation,
+    experiment,
     conclusion,
 }
 
@@ -70,7 +66,7 @@
 
 \pagenumbering{Roman}
 
-%\setcounter{tocdepth}{1}
+\setcounter{tocdepth}{1}
 \tableofcontents
 \newpage
 
