--- a/acronyms.tex
+++ b/acronyms.tex
@@ -9,3 +9,4 @@
 \DeclareAcronym{cert}{short=CERT, long=Computer Emergency Response Team}
 \DeclareAcronym{os}{short=OS, long=Operating System}
 \DeclareAcronym{ids}{short=IDS, long=Intrusion Detection Systems}
+\DeclareAcronym{iocta}{short=IOCTA, long=Internet Organised Crime Threat Assessment}
