--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,8 @@
   fontsize=12pt,
   fleqn,
   numbers=noendperiod,
-  headings=normal,
+  headings=big,
+  chapterprefix=true,
   version=3.03,
   toc=bibliography,
   listof=totoc,
@@ -100,7 +101,7 @@
 \setcounter{page}{6}
 
 %\nocite{*}
-\bibliographystyle{alpha}  
+\bibliographystyle{abbrv}  
 \bibliography{references}
 % Installation and configuration
 \begin{appendices}
