--- a/references.bib
+++ b/references.bib
@@ -253,10 +253,57 @@
   author = {Tejvir Kaur and Vimmi Malhotra and Dheerendra Singh},
   year   = {2014}
 }
+
 @misc{heicloud2021,
   author       = {Rechenzentrum der Universität Heidelberg},
   title        = {heiCLOUD - Die Heidelberger Cloud-Infrastruktur},
-  howpublished = {https://heicloud.uni-heidelberg.de/heiCLOUD},
+  howpublished = {\url{https://heicloud.uni-heidelberg.de/heiCLOUD}},
   year         = {2021},
   note         = {Accessed: 2021-09-02}
+}
+
+@misc{statista2021,
+  author       = {Statista},
+  title        = {Year-over-year change in average monthly in-home data usage by device in the United States from January to March 2020},
+  howpublished = {\url{https://www.statista.com/statistics/1106821/covid-19-change-in-in-home-data-usage-in-us-2020/}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-04},
+}
+
+@misc{ibm2021,
+  author       = {},
+  title        = {},
+  howpublished = {},
+  year         = {}
+}
+
+@misc{aws2021,
+  author       = {},
+  title        = {},
+  howpublished = {},
+  year         = {}
+}
+
+@misc{google2021,
+  author       = {},
+  title        = {},
+  howpublished = {},
+  year         = {}
+}
+
+@article{iocta2020,
+  author          = {Europol},
+  title           = {Internet Organised Crime Threat Assessment (IOCTA)},
+  journal         = {European Union Agency for Law Enforcement Cooperation},
+  volume          = {9},
+  number          = {1},
+  year            = {2020}
+}
+
+@misc{europol2021,
+  author       = {Europol},
+  title        = {About Europol},
+  howpublished = {\url{https://www.europol.europa.eu/about-europol}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-04},
 }
