--- a/main.tex
+++ b/main.tex
@@ -5,8 +5,8 @@
   fontsize=12pt,
   fleqn,
   numbers=noendperiod,
-  headings=big,
-  chapterprefix=true,
+  headings=normal,
+  %chapterprefix=true,
   version=3.03,
   toc=bibliography,
   listof=totoc,
@@ -30,6 +30,7 @@
 \usepackage[inline]{enumitem}
 
 \include{acronyms}
+\include{quote}
 \include{network-config}
 
 \newcommand*{\files}{
