--- a/references.bib
+++ b/references.bib
@@ -307,3 +307,12 @@
   year         = {2021},
   note         = {Accessed: 2021-09-04},
 }
+
+@article{fahim2020,
+  author          = {Fahim Abbasi},
+  title           = {2020 Trustwave Global Security Report},
+  journal         = {Trustwave},
+  volume          = {},
+  number          = {},
+  year            = {2020}
+}
