--- a/acronyms.tex
+++ b/acronyms.tex
@@ -10,3 +10,4 @@
 \DeclareAcronym{os}{short=OS, long=Operating System}
 \DeclareAcronym{ids}{short=IDS, long=Intrusion Detection Systems}
 \DeclareAcronym{iocta}{short=IOCTA, long=Internet Organised Crime Threat Assessment}
+\DeclareAcronym{dmz}{short=DMZ, long=Demilitarized Zone}
