--- a/network/honeypot-example.tex
+++ b/network/honeypot-example.tex
@@ -51,11 +51,11 @@
   \node[xshift=0.25cm, right of = l3 switch 1,align=right](lev1) {DMZ};
   \node[xshift=0.50cm, right of = l3 switch 2,align=right](lev2) {Internal};
 
-  \node[below of = server 3, align=right](a) {Honeybot A};
+  \node[below of = server 3, align=right](a) {Honeypot A};
   \node[below of = server 2, align=right](b) {Web};
   \node[below of = server 1, align=right](c) {Mail};
 
-  \node[below of = server 6, align=right](a) {Honeybot B};
+  \node[below of = server 6, align=right](a) {Honeypot B};
   \node[below of = server 5, align=right](b) {Desktop};
   \node[below of = server 4, align=right](c) {Desktop};
 
