--- a/references.bib
+++ b/references.bib
@@ -1,10 +1,12 @@
-@article{Provos2003,
-  author = {Provos, Niels},
-  year   = {2003},
-  month  = {01},
-  pages  = {},
-  title  = {Honeyd: A Virtual Honeypot Daemon (Extended Abstract)}
+@conference{Provos2003,
+  author    = {Niels Provos},
+  title     = {Honeyd - A Virtual Honeypot Daemon},
+  year      = {2003},
+  address   = {Washington, D.C.},
+  publisher = {{USENIX} Association},
+  month     = aug
 }
+
 @article{Kelly2021,
   doi       = {10.3390/s21072433},
   url       = {https://doi.org/10.3390/s21072433},
@@ -18,6 +20,7 @@
   title     = {A Comparative Analysis of Honeypots on Different Cloud Platforms},
   journal   = {Sensors}
 }
+
 @inproceedings{Kuwatly2004,
   author    = {Kuwatly, I. and Sraj, M. and Al Masri, Z. and Artail, H.},
   booktitle = {The IEEE/ACS International Conference onPervasive Services, 2004. ICPS 2004. Proceedings.},
@@ -28,6 +31,7 @@
   pages     = {95-104},
   doi       = {10.1109/PERSER.2004.1356776}
 }
+
 @book{Spitzner2003,
   author    = {Spitzner, Lance},
   year      = {2003},
@@ -37,13 +41,15 @@
   publisher = {Addison-Wesley},
   address   = {Amsterdam}
 }
-@misc{Diebold2005,
+
+@conference{Diebold2005,
   author    = {P. Diebold, A. Hess, G. Schaefer},
   title     = {A Honeypot Architecture for Detecting and Analyzing Unknown Network Attacks},
   publisher = {Telecommunication Networks Group, Technische Universität Berlin, Germany,},
   year      = {2005},
   month     = {Feburary}
 }
+
 @inproceedings{Mahajan2017,
   author    = {Mahajan, Varan and Peddoju, Sateesh K},
   booktitle = {2017 International Conference on Computing, Communication and Automation (ICCCA)},
@@ -54,6 +60,7 @@
   pages     = {829-834},
   doi       = {10.1109/CCAA.2017.8229911}
 }
+
 @book{Wendzel2021,
   doi       = {10.1007/978-3-658-33423-9},
   url       = {https://doi.org/10.1007/978-3-658-33423-9},
@@ -62,6 +69,7 @@
   author    = {Steffen Wendzel},
   title     = {{IT}-Sicherheit f\"{u}r {TCP}/{IP}- und {IoT}-Netzwerke}
 }
+
 @article{Jiang2006,
   doi       = {10.1016/j.jpdc.2006.04.012},
   url       = {https://doi.org/10.1016/j.jpdc.2006.04.012},
@@ -75,6 +83,7 @@
   title     = {Collapsar: A {VM}-based honeyfarm and reverse honeyfarm architecture for network attack capture and detention},
   journal   = {Journal of Parallel and Distributed Computing}
 }
+
 @article{NawrockiWSKS2016,
   author        = {Marcin Nawrocki and Matthias W{\"{a}}hlisch and Thomas C. Schmidt and Christian Keil and Jochen Sch{\"{o}}nfelder},
   title         = {A Survey on Honeypot Software and Data Analysis},
@@ -88,6 +97,7 @@
   biburl        = {https://dblp.org/rec/journals/corr/NawrockiWSKS16.bib},
   bibsource     = {dblp computer science bibliography, https://dblp.org}
 }
+
 @inproceedings{Song2011,
   author    = {Song, Jungsuk and Takakura, Hiroki and Okabe, Yasuo and Eto, Masashi and Inoue, Daisuke and Nakao, Koji},
   title     = {Statistical Analysis of Honeypot Data and Building of Kyoto 2006+ Dataset for NIDS Evaluation},
@@ -104,6 +114,7 @@
   location  = {Salzburg, Austria},
   series    = {BADGERS '11}
 }
+
 @inproceedings{Borisaniya2012,
   author    = {Borisaniya, Bhavesh and Patel, Avi and Patel, Dhiren R. and Patel, Hiren},
   editor    = {Dimitrakos, Theo and Moona, Rajat and Patel, Dhiren and McKnight, D. Harrison},
@@ -116,6 +127,7 @@
   abstract  = {Cloud services delivered as utility computing over the Internet makes it an attractive target for cyber intruders. Protecting network accessible Cloud resources and services from ever increasing cyber threats is of great concern. Most of the Network based Intrusion Detection System (NIDS) being rule based and therefore only capable of identifying known attacks (through pattern matching). Traditional Anomaly Detection based IDS may generate more number of false positives.},
   isbn      = {978-3-642-29852-3}
 }
+
 @book{YinZhang2016,
   doi       = {10.1007/978-3-319-38904-2},
   url       = {https://doi.org/10.1007/978-3-319-38904-2},
@@ -124,6 +136,7 @@
   editor    = {Yin Zhang and Limei Peng and Chan-Hyun Youn},
   title     = {Cloud Computing}
 }
+
 @article{Wang2010,
   doi       = {10.1007/s00354-008-0081-5},
   url       = {https://doi.org/10.1007/s00354-008-0081-5},
@@ -137,6 +150,7 @@
   title     = {Cloud Computing: a Perspective Study},
   journal   = {New Generation Computing}
 }
+
 @article{Armbrust2010,
   doi       = {10.1145/1721654.1721672},
   url       = {https://doi.org/10.1145/1721654.1721672},
@@ -150,12 +164,26 @@
   title     = {A view of cloud computing},
   journal   = {Communications of the {ACM}}
 }
-@misc{hayes2008,
-  title     = {Cloud computing},
-  author    = {Hayes, Brian},
-  year      = {2008},
-  publisher = {ACM New York, NY, USA}
+
+@article{hayes2008,
+  author     = {Hayes, Brian},
+  title      = {Cloud Computing},
+  year       = {2008},
+  issue_date = {July 2008},
+  publisher  = {Association for Computing Machinery},
+  address    = {New York, NY, USA},
+  volume     = {51},
+  number     = {7},
+  issn       = {0001-0782},
+  url        = {https://doi.org/10.1145/1364782.1364786},
+  doi        = {10.1145/1364782.1364786},
+  abstract   = {As software migrates from local PCs to distant Internet servers, users and developers alike go along for the ride.},
+  journal    = {Commun. ACM},
+  month      = jul,
+  pages      = {9–11},
+  numpages   = {3}
 }
+
 @misc{regalado2020,
   title     = {Who Coined 'Cloud Computing'?},
   url       = {https://www.technologyreview.com/2011/10/31/257406/who-coined-cloud-computing/},
@@ -165,6 +193,7 @@
   year      = {2020},
   month     = {Feb}
 }
+
 @article{Nithin2012,
   title     = {Cloud security using honeypot systems},
   author    = {Nithin Chandra, SR and Madhuri, TM},
@@ -175,6 +204,7 @@
   year      = {2012},
   publisher = {Citeseer}
 }
+
 @inproceedings{Dillon2010,
   doi       = {10.1109/aina.2010.187},
   url       = {https://doi.org/10.1109/aina.2010.187},
@@ -184,6 +214,7 @@
   title     = {Cloud Computing: Issues and Challenges},
   booktitle = {2010 24th {IEEE} International Conference on Advanced Information Networking and Applications}
 }
+
 @techreport{Mell2011,
   doi         = {10.6028/nist.sp.800-145},
   url         = {https://doi.org/10.6028/nist.sp.800-145},
@@ -267,13 +298,13 @@
   title        = {Year-over-year change in average monthly in-home data usage by device in the United States from January to March 2020},
   howpublished = {\url{https://www.statista.com/statistics/1106821/covid-19-change-in-in-home-data-usage-in-us-2020/}},
   year         = {2021},
-  note         = {Accessed: 2021-09-04},
+  note         = {Accessed: 2021-09-04}
 }
 
 @misc{ibm2021,
   author       = {},
-  title        = {},
-  howpublished = {},
+  title        = {IBM Cloud Hybrid. Open. Resilient. Your platform and partner for digital transformation.},
+  howpublished = {\url{https://www.ibm.com/cloud}},
   year         = {}
 }
 
@@ -292,12 +323,12 @@
 }
 
 @article{iocta2020,
-  author          = {Europol},
-  title           = {Internet Organised Crime Threat Assessment (IOCTA)},
-  journal         = {European Union Agency for Law Enforcement Cooperation},
-  volume          = {9},
-  number          = {1},
-  year            = {2020}
+  author  = {Europol},
+  title   = {Internet Organised Crime Threat Assessment (IOCTA)},
+  journal = {European Union Agency for Law Enforcement Cooperation},
+  volume  = {9},
+  number  = {1},
+  year    = {2020}
 }
 
 @misc{europol2021,
@@ -305,14 +336,83 @@
   title        = {About Europol},
   howpublished = {\url{https://www.europol.europa.eu/about-europol}},
   year         = {2021},
-  note         = {Accessed: 2021-09-04},
+  note         = {Accessed: 2021-09-04}
+}
+
+@misc{gonzalez2003,
+  author       = {Alberto Gonzalez, Jack Whitsitt},
+  title        = {The Bait and Switch Honeypot: An active and aggressive part of your network security infrastructure.},
+  howpublished = {\url{http://baitnswitch.sourceforge.net/}},
+  year         = {2002},
+  note         = {Accessed: 2021-09-06}
 }
 
 @article{fahim2020,
-  author          = {Fahim Abbasi},
-  title           = {2020 Trustwave Global Security Report},
-  journal         = {Trustwave},
-  volume          = {},
-  number          = {},
-  year            = {2020}
+  author  = {Fahim Abbasi},
+  title   = {2020 Trustwave Global Security Report},
+  journal = {Trustwave},
+  volume  = {},
+  number  = {},
+  year    = {2020}
 }
+
+@inproceedings{takemori2003,
+  author    = {Takemori, K. and Rikitake, K. and Miyake, Y. and Nakao, K.},
+  booktitle = {10th International Conference on Telecommunications, 2003. ICT 2003.},
+  title     = {Intrusion trap system: an efficient platform for gathering intrusion-related information},
+  year      = {2003},
+  volume    = {1},
+  number    = {},
+  pages     = {614-619 vol.1},
+  doi       = {10.1109/ICTEL.2003.1191480}
+}
+
+@article{kreibich2004,
+  author     = {Kreibich, Christian and Crowcroft, Jon},
+  title      = {Honeycomb: Creating Intrusion Detection Signatures Using Honeypots},
+  year       = {2004},
+  issue_date = {January 2004},
+  publisher  = {Association for Computing Machinery},
+  address    = {New York, NY, USA},
+  volume     = {34},
+  number     = {1},
+  issn       = {0146-4833},
+  url        = {https://doi.org/10.1145/972374.972384},
+  doi        = {10.1145/972374.972384},
+  journal    = {SIGCOMM Comput. Commun. Rev.},
+  month      = jan,
+  pages      = {51–56},
+  numpages   = {6},
+  keywords   = {suffix trees, traffic signatures, honeypots, longest-common-substring algorithms, pattern detection, network intrusion detection, protocol analysis}
+}
+
+@book{caswell2003,
+  author    = {Caswell, Brian and Foster, James C. and Russell, Ryan and Beale, Jay and Posluns, Jeffrey},
+  title     = {Snort 2.0 Intrusion Detection},
+  year      = {2003},
+  isbn      = {1931836744},
+  publisher = {Syngress Publishing}
+}
+
+@article{paxson1999,
+  author     = {Paxson, Vern},
+  title      = {Bro: A System for Detecting Network Intruders in Real-Time},
+  year       = {1999},
+  issue_date = {Dec. 1999},
+  publisher  = {Elsevier North-Holland, Inc.},
+  address    = {USA},
+  volume     = {31},
+  number     = {23–24},
+  issn       = {1389-1286},
+  url        = {https://doi.org/10.1016/S1389-1286(99)00112-7},
+  doi        = {10.1016/S1389-1286(99)00112-7},
+  journal    = {Comput. Netw.},
+  month      = dec,
+  pages      = {2435–2463},
+  numpages   = {29},
+  keywords   = {passive network monitoring, network intrusion detection, network monitoring evasion, domain-specific languages}
+}
+
+
+  
+
