Finish background chapter

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -2,12 +2,15 @@
 \DeclareAcronym{saas}{short=SaaS, long=Software-as-a-Service}
 \DeclareAcronym{iaas}{short=IaaS, long=Infrastructure-as-a-Service}
 \DeclareAcronym{paas}{short=PaaS, long=Platform-as-a-Service}
-\DeclareAcronym{http}{short=HTTP, long= Hypertext Transfer Protocol}
+\DeclareAcronym{http}{short=HTTP, long=Hypertext Transfer Protocol}
 \DeclareAcronym{daas}{short=DaaS, long=Data-as-a-Service}
 \DeclareAcronym{haas}{short=HaaS, long=Hardware-as-a-Service}
 \DeclareAcronym{dtk}{short=DTK, long=Deception Toolkit}
 \DeclareAcronym{cert}{short=CERT, long=Computer Emergency Response Team}
-\DeclareAcronym{os}{short=OS, long=Operating System}
+\DeclareAcronym{os}{short=OS, long=operating system}
 \DeclareAcronym{ids}{short=IDS, long=Intrusion Detection Systems}
 \DeclareAcronym{iocta}{short=IOCTA, long=Internet Organised Crime Threat Assessment}
-\DeclareAcronym{dmz}{short=DMZ, long=Demilitarized Zone}
+\DeclareAcronym{dmz}{short=DMZ, long=demilitarized zone}
+\DeclareAcronym{eu}{short=EU, long=European Union}
+\DeclareAcronym{vm}{short=VM, long=virtual machine}
+\DeclareAcronym{vmm}{short=VMM, long=virtual machine monitors}
