--- a/references.bib
+++ b/references.bib
@@ -413,6 +413,65 @@
   keywords   = {passive network monitoring, network intrusion detection, network monitoring evasion, domain-specific languages}
 }
 
+@article{sokol2017,
+  author  = {Sokol, Pavol and Míšek, Jakub and Husák, Martin},
+  year    = {2017},
+  month   = {02},
+  pages   = {},
+  title   = {Honeypots and honeynets: issues of privacy},
+  volume  = {2017},
+  journal = {EURASIP Journal on Information Security},
+  doi     = {10.1186/s13635-017-0057-4}
+}
 
-  
+@article{kreuter2004,
+  title   = {Where server virtualization was born},
+  author  = {Kreuter, D},
+  journal = {Virtual Strategy Magazine},
+  year    = {2004}
+}
 
+@article{daniels2009,
+  author     = {Daniels, Jeff},
+  title      = {Server Virtualization Architecture and Implementation},
+  year       = {2009},
+  issue_date = {September 2009},
+  publisher  = {Association for Computing Machinery},
+  address    = {New York, NY, USA},
+  volume     = {16},
+  number     = {1},
+  issn       = {1528-4972},
+  url        = {https://doi.org/10.1145/1618588.1618592},
+  doi        = {10.1145/1618588.1618592},
+  journal    = {XRDS},
+  month      = sep,
+  pages      = {8–12},
+  numpages   = {5}
+}
+
+@misc{cert2021,
+  author       = {Federal Office for Information Security},
+  title        = {CERT-Bund},
+  howpublished = {\url{https://www.bsi.bund.de/EN/Topics/IT-Crisis-Management/CERT-Bund/cert-bund_node.html}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-12}
+}
+
+@misc{docker2021,
+  author       = {Docker},
+  title        = {Docker Overview},
+  howpublished = {\url{https://docs.docker.com/get-started/overview/}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-21}
+}
+
+@article{lichstei1969,
+  title     = {When should you emulate},
+  author    = {Lichstein. HA},
+  journal   = {Datamation},
+  volume    = {15},
+  number    = {11},
+  pages     = {205},
+  year      = {1969},
+  publisher = {CAHNERS-DENVER PUBLISHING CO 2000 CLEARWATER DR, OAK BROOK, IL 60523-8809}
+}
